# shell_tool_crew_ai

./: README.md
shell_tool_crew/: .gitignore  README.md  dummy_file.txt  pyproject.toml  seat_leon_st_facts.json  tools.md
shell_tool_crew/src/shell_tool_crew/: crew.py  main.py
shell_tool_crew/src/shell_tool_crew/config/: agents.yaml  tasks.yaml
shell_tool_crew/src/shell_tool_crew/tools/: ShellCommandTool.py
