[project]
name = "shell_tool_crew"
version = "0.1.0"
description = "shell_tool_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.4.1",
]

[project.scripts]
shell_tool_crew = "shell_tool_crew.main:run"
run_crew = "shell_tool_crew.main:run"
train = "shell_tool_crew.main:train"
replay = "shell_tool_crew.main:replay"
test = "shell_tool_crew.main:test"
run_with_trigger = "shell_tool_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
